# HellbenderExamples

./: .gitignore  .gitmodules  BUILD.MD  CMakeLists.txt  LICENSE  README.md  UpdateSubmodules.sh
Exemples/Cube/: CubeScene.h  main.cpp
Exemples/Model/: CMakeLists.txt  ModelScene.h  main.cpp
Exemples/Text/: CMakeLists.txt  TextScene.h  main.cpp
Exemples/Triangle/: TriangleScene.h  main.cpp
Games/Pong/: FPSCounter.h  PongGame.cpp  PongGameScene.cpp  PongUIScene.cpp  main.cpp
Games/Pong/Systems/: BallSystem.cpp
Games/PongLockstep/: CMakeLists.txt  FPSCounter.h  PongGameScene.cpp  PongUIScene.cpp  main.cpp
Games/PongLockstep/simulation/: Client.h
Games/Raytracer/: CMakeLists.txt  Material.h  RaytracingModelParser.cpp  RaytracingModelParser.h  RaytracingScene.cpp  RaytracingScene.h  main.cpp
Games/Raytracer/res/shaders/: closesthit_aabb.glsl  print.glsl
HellbenderPlayground/: CMakeLists.txt  main.cpp
HellbenderPlayground/Examples/: OrderedRenderingScene.h
Samples/Cube/: CMakeLists.txt  CubeScene.h  main.cpp
Samples/Instancing/: CMakeLists.txt  InstancingScene.h  main.cpp
Samples/Model/: ModelScene.h
Samples/Pong/: CMakeLists.txt  FPSCounter.h  PongGame.cpp  PongGameScene.cpp  PongGameScene.h  PongUIScene.cpp  PongUIScene.h  main.cpp
Samples/Pong/Systems/: BallSystem.cpp  BallSystem.h  PaddleSystem.h
Samples/RasterizationOrdered/: CMakeLists.txt  OrderedRenderingScene.h  main.cpp
Samples/Raytracer/: CMakeLists.txt  DataStructures.h  Denoiser.cpp  Denoiser.h  Raytracer.cpp  Raytracer.h  RaytracingModelParser.cpp  RaytracingModelParser.h  RaytracingScene.cpp  RaytracingScene.h  main.cpp  todo.md
Samples/Raytracer/res/shaders/denoising/: blur.glsl  denoise.comp  denoise.glsl  horizontal.comp  temporal_accumulation.comp  temporal_reprojection.comp  vertical.comp
Samples/Raytracer/res/shaders/raytracing/: common.glsl  data_structures.glsl  raytracing.glsl
Samples/Raytracer/res/shaders/raytracing/closestHit/: closest_hit_mesh.glsl  mesh.glsl  primary_closest_hit_aabb.glsl  primary_closest_hit_mesh.glsl  raytracing.glsl
Samples/Raytracer/res/shaders/raytracing/miss/: atmospheric_scattering.glsl  miss.glsl  primary_miss.glsl
Samples/Raytracer/res/shaders/raytracing/raygen/: raygen.glsl  raytracing.glsl
Samples/Text/: TextScene.h  main.cpp
Samples/Triangle/: CMakeLists.txt  TriangleScene.h
res/shaders/pathTracer/: PathTracer.frag
(+11 files in other folders)
